--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Favicon -->
     <link type="image/svg+xml" href="/MF-black.svg" rel="icon" media="(prefers-color-scheme: light)" />
     <link type="image/svg+xml" href="/MF.svg" rel="icon" media="(prefers-color-scheme: dark)" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matteo Fenu</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Matteo Fenu | Software Developer</title>
+    <meta name="description" content="Hi, I'm Matteo Fenu, a passionate software developer. Check out my portfolio and projects!" />
+    <meta name="keywords" content="Matteo Fenu, software developer, web development, programming, portfolio" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="Matteo Fenu | Software Developer" />
+    <meta property="og:description" content="Hi, I'm Matteo Fenu, a passionate software developer. Check out my portfolio and projects!" />
+    <meta property="og:image" content="https://matteofenu.github.io/matteo-fenu-portrait.svg" />
+    <meta property="og:url" content="https://matteofenu.github.io" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Matteo Fenu | Software Developer" />
+    <meta name="twitter:description" content="Hi, I'm Matteo Fenu, a passionate software developer. Check out my portfolio and projects!" />
+    <meta name="twitter:image" content="https://matteofenu.github.io/matteo-fenu-portrait.svg" />
+    <meta name="twitter:site" content="@Matteo_f" />
   </head>
   <body>
     <div id="root"></div>
