google site verification

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <meta name="twitter:description" content="Hi, I'm Matteo Fenu, a passionate software developer. Check out my portfolio and projects!" />
     <meta name="twitter:image" content="https://matteofenu.github.io/matteo-fenu-portrait.svg" />
     <meta name="twitter:site" content="@Matteo_f" />
+
+    <meta name="google-site-verification" content="1k3gVGSjwIprJGUOAmgLhe2iYKVr2giMI0ZHd6EWeIM" />
   </head>
   <body>
     <div id="root"></div>
